Bug 150500 - Field is duplicated after pasting it. then it hangs if undone
Summary: Field is duplicated after pasting it. then it hangs if undone
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.3.3.2 release
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:7.5.0 target:7.4.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2022-08-19 12:45 UTC by Xisco Faulí
Modified: 2022-10-13 10:08 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file (14.80 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2022-08-19 12:45 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2022-08-19 12:45:05 UTC
Created attachment 181885 [details]
sample file

Steps to reproduce:
1. Open attached file
2. Select all
3. Copy
4. New file
5. Paste

-> At the point there should be only one field visible. Instead the field is duplicated.

6. Undo

-> LibreOffice hangs

Reproduced in

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: f63ffcba32527d04abbd460dddd3e5ca63d695df
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2022-08-19 12:46:17 UTC
Regression introduced by:

author	Michael Stahl <michael.stahl@allotropia.de>	2022-04-20 15:04:47 +0200
committer	Michael Stahl <michael.stahl@allotropia.de>	2022-04-20 16:55:44 +0200
commit 2f726fa41cbd249f2fb30222b29d5f30bce52e6e (patch)
tree 0ec4e43a3b862673e6263443eaad828235a1e575
parent 8d9c56e8f42428fd6695942c673bffb985d22ad5 (diff)
tdf#147723 sw_fieldmarkhide: fix crash when copying multiple fieldmarks

Bisected with: bibisect-linux64-7.4

Adding Cc: to Michael Stahl
Comment 2 Commit Notification 2022-10-07 11:21:11 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/98bcf50ad1e1e584d2f070693d10bf5084146eb2

tdf#150500 sw_fieldmarkhide: fix duplicate text frame on paste

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Michael Stahl 2022-10-07 14:27:44 UTC
fixed on master
Comment 4 Commit Notification 2022-10-07 18:28:15 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/0fb5f7e22b68fc045843af95ca3918c1d92a8656

tdf#150500 sw_fieldmarkhide: fix duplicate text frame on paste

It will be available in 7.4.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Kevin Suo 2022-10-08 08:10:18 UTC
The regression commit for bug 147723 is "target:7.4.0 target:7.3.3", thus I assume this one also affects 7.4 and 7.3 branch. Revise the version field accordingly.
Comment 6 Xisco Faulí 2022-10-13 10:08:13 UTC
Verified in

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 001de7e21d29fccff904fe23de05afd68922fe2e
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: en-US (es_ES.UTF-8); UI: en-US
Calc: threaded

@M. Stahl, thanks for fixing this issue!!