tdf#150500 sw_fieldmarkhide: fix duplicate text frame on paste

The problem is that in MakeFrames() after the 1st iteration the
SwNode2Layout::NextFrame() on node 10 returns a SwTextFrame that was
just created by the 1st iteration, due to a fieldmark merging the 2
SwTextNodes.

Only itreate the frames that are pre-existing.

(regression from commit 2f726fa41cbd249f2fb30222b29d5f30bce52e6e)

Change-Id: Iba684dfc903e1c72ca3e70a9aabf1aecf4baf32b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/141032
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
(cherry picked from commit 21358e0502995238b85677d72a005f3f96d60f7f)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/141059
Reviewed-by: Caolán McNamara <caolanm@redhat.com>